# SAT-phase-transition

./: CMakeLists.txt  main.cpp
results/: data_10_2.txt  data_10_3.txt  data_20_2.txt  data_20_3.txt  data_5_2.txt  data_5_3.txt  plot.txt
